fix oci explorer routes
